--- a/StationConsoler/MainWindow.xaml
+++ b/StationConsoler/MainWindow.xaml
@@ -1,23 +1,41 @@
 ﻿<Window x:Class="StationConsoler.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="537" Width="855" Loaded="Window_Loaded" xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid" xmlns:dxwui="http://schemas.devexpress.com/winfx/2008/xaml/windowsui" WindowStartupLocation="CenterScreen">
-    <Grid>
+        Title="MainWindow" Height="553" Width="987" Loaded="Window_Loaded" xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid" xmlns:dxwui="http://schemas.devexpress.com/winfx/2008/xaml/windowsui" WindowStartupLocation="CenterScreen">
+    <Grid Background="LightBlue">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="589*" />
-            <ColumnDefinition Width="235" />
+            <ColumnDefinition Width="589" />
+            <ColumnDefinition Width="235*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="23" />
+            <RowDefinition Height="8" />
             <RowDefinition Height="151" />
             <RowDefinition Height="327*" />
             <RowDefinition Height="26" />
         </Grid.RowDefinitions>
 
-        <DataGrid Name="dgDataHandle" Margin="5" Grid.Row="1" Grid.Column="1" CanUserAddRows="False" CanUserDeleteRows="False">
-            <DataGrid.ContextMenu>
-                <ContextMenu Name="dgDataHandleMenu" StaysOpen="true">
+        <ListView x:Name="lstViewDataHandle" Margin="5" Grid.Row="1" Grid.Column="1">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn Header="端口"
+                                    DisplayMemberBinding="{Binding ListenPort}" />
+                    <GridViewColumn Header="监听状态" Width="60"
+                                    DisplayMemberBinding="{Binding ListenState}" />
+                    <GridViewColumn Header="定时器状态" Width="80"
+                                    DisplayMemberBinding="{Binding TimerState}" />
+                    <GridViewColumn Header="模块名"
+                                    DisplayMemberBinding="{Binding ChineseName}" />
+                    <GridViewColumn Header="文件名"
+                                    DisplayMemberBinding="{Binding FileName}" />
+                    <GridViewColumn Header="定时器时间" Width="80"
+                                    DisplayMemberBinding="{Binding TimerInterval}" />
+                    <GridViewColumn Header="定时器命令" Width="80"
+                                    DisplayMemberBinding="{Binding TimerString}" />
+                </GridView>
+            </ListView.View>
+            <ListView.ContextMenu>
+                <ContextMenu StaysOpen="true">
                     <MenuItem Header="启动监听" Click="MenuItem_StartListen_Click"/>
                     <MenuItem Header="关闭监听" Click="MenuItem_StopListen_Click"/>
                     <Separator></Separator>
@@ -27,21 +45,33 @@
                     <MenuItem Header="启动定时器" Click="MenuItem_StartTimer_Click"/>
                     <MenuItem Header="停止定时器" Click="MenuItem_StopTimer_Click"/>
                 </ContextMenu>
-            </DataGrid.ContextMenu>
-        </DataGrid>
+            </ListView.ContextMenu>
+        </ListView>
 
-        <DataGrid Name="lstClientPoint" Grid.Row="2" Grid.Column="1" Margin="5" CanUserAddRows="False" CanUserDeleteRows="False">
-            <DataGrid.ContextMenu>
-                <ContextMenu Name="lstClientPointMenu" StaysOpen="true">
+        <ListView x:Name="lstViewClientPoint" Margin="5" Grid.Row="2" Grid.Column="1">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn Header="基站IP" Width="120"
+                                    DisplayMemberBinding="{Binding IpAddress}" />
+                    <GridViewColumn Header="本地端口" Width="55"
+                                    DisplayMemberBinding="{Binding AcceptedPort}" />
+                    <GridViewColumn Header="创建时间" Width="140"
+                                    DisplayMemberBinding="{Binding ConnectTime}" />
+                    <GridViewColumn Header="CCID" Width="160"
+                                    DisplayMemberBinding="{Binding CCID}" />
+                </GridView>
+            </ListView.View>
+            <ListView.ContextMenu>
+                <ContextMenu StaysOpen="true">
                     <MenuItem Header="发送命令" Click="MenuItem_SendCommand_Click"/>
                     <MenuItem Header="关闭连接" Click="MenuItem_CloseClient_Click"/>
                     <Separator></Separator>
                     <MenuItem Header="显示所有" Click="MenuItem_ShowClient_Click"/>
                 </ContextMenu>
-            </DataGrid.ContextMenu>
-        </DataGrid>
+            </ListView.ContextMenu>
+        </ListView>
 
-        <TextBox Name="txtMsg" Grid.Column="2" Grid.Row="1" Grid.RowSpan="2" Margin="5" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto"></TextBox>
+        <TextBox Name="txtMsg" Grid.Column="2" Grid.Row="1" Grid.RowSpan="2" Margin="5" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" IsReadOnly="True"></TextBox>
 
         <StatusBar Name="statusBar" Grid.Row="3" Grid.ColumnSpan="3" VerticalAlignment="Bottom">
             <StatusBarItem>
