--- a/StationConsole/App.xaml
+++ b/StationConsole/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="StationConsoler.App"
+﻿<Application x:Class="StationConsole.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="MainWindow.xaml">
