--- a/StationConsole/MainWindow.xaml
+++ b/StationConsole/MainWindow.xaml
@@ -49,6 +49,8 @@
             </ListView.ContextMenu>
         </ListView>
 
+        <GridSplitter Height="2"  Grid.Column="1" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Bottom"></GridSplitter>
+
         <ListView x:Name="lstViewClientPoint" Margin="5" Grid.Row="2" Grid.Column="1">
             <ListView.View>
                 <GridView>
@@ -71,7 +73,9 @@
                 </ContextMenu>
             </ListView.ContextMenu>
         </ListView>
-
+        
+        <GridSplitter Width="2"  Grid.Column="1" Grid.Row="1" Grid.RowSpan="2" ></GridSplitter>
+        
         <TextBox Name="txtMsg" Grid.Column="2" Grid.Row="1" Grid.RowSpan="2" Margin="5" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" IsReadOnly="True"></TextBox>
 
         <StatusBar Name="statusBar" Grid.Row="3" Grid.ColumnSpan="3" VerticalAlignment="Bottom">
