--- a/StationConsole/MainWindow.xaml
+++ b/StationConsole/MainWindow.xaml
@@ -1,7 +1,16 @@
 ﻿<Window x:Class="StationConsole.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:local="clr-namespace:StationConsole"
         Title="MainWindow" Height="553" Width="987" Loaded="Window_Loaded" xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid" xmlns:dxwui="http://schemas.devexpress.com/winfx/2008/xaml/windowsui" WindowStartupLocation="CenterScreen">
+    <Window.Resources>
+        <local:ClientPointTable x:Key="clientPointTable"></local:ClientPointTable>
+            <CollectionViewSource x:Key='clients' Source="{Binding Source={StaticResource clientPointTable}}">
+            <CollectionViewSource.GroupDescriptions>
+                    <PropertyGroupDescription PropertyName="AcceptedName" />
+            </CollectionViewSource.GroupDescriptions>
+        </CollectionViewSource>
+    </Window.Resources>
     <Grid Background="LightBlue">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
@@ -52,7 +61,34 @@
 
         <GridSplitter Height="2"  Grid.Column="1" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Bottom"></GridSplitter>
 
-        <ListView x:Name="lstViewClientPoint" Margin="5" Grid.Row="2" Grid.Column="1">
+        <ListView x:Name="lstViewClientPoint" Margin="5" Grid.Row="2" Grid.Column="1" ItemsSource="{Binding Source={StaticResource clients}}">
+            <ListView.GroupStyle>
+                <GroupStyle>
+                    <GroupStyle.ContainerStyle>
+                        <Style TargetType="{x:Type GroupItem}">
+                            <Setter Property="Margin" Value="0,0,0,5"/>
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="{x:Type GroupItem}">
+                                        <Expander IsExpanded="True" BorderBrush="#FFA4B97F" BorderThickness="0,0,0,1">
+                                            <Expander.Header>
+                                                <DockPanel>
+                                                    <TextBlock FontWeight="Bold" Text="{Binding Path=Name}" Margin="5,0,0,0" Width="100"/>
+                                                    <TextBlock FontWeight="Bold" Text="{Binding Path=ItemCount}"/>
+                                                </DockPanel>
+                                            </Expander.Header>
+                                            <Expander.Content>
+                                                <ItemsPresenter />
+                                            </Expander.Content>
+                                        </Expander>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                        </Style>
+                    </GroupStyle.ContainerStyle>
+                </GroupStyle>
+            </ListView.GroupStyle>
+            
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="客户端IP" Width="130"
@@ -69,8 +105,6 @@
                 <ContextMenu StaysOpen="true">
                     <MenuItem Header="发送命令" Click="MenuItem_SendCommand_Click"/>
                     <MenuItem Header="关闭连接" Click="MenuItem_CloseClient_Click"/>
-                    <Separator></Separator>
-                    <MenuItem x:Name="clientPointShowModeMenu" Header="显示方式"></MenuItem>
                 </ContextMenu>
             </ListView.ContextMenu>
         </ListView>
@@ -81,7 +115,7 @@
 
         <StatusBar Name="statusBar" Grid.Row="3" Grid.ColumnSpan="3" VerticalAlignment="Bottom">
             <StatusBarItem>
-                <TextBlock x:Name="clientPointShowModeStatus">Ready</TextBlock>
+                <TextBlock>Ready</TextBlock>
             </StatusBarItem>
         </StatusBar>
     </Grid>
