--- a/StationConsole/MainWindow.xaml
+++ b/StationConsole/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:StationConsole"
-        Title="MainWindow" Height="553" Width="987" Loaded="Window_Loaded" xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid" xmlns:dxwui="http://schemas.devexpress.com/winfx/2008/xaml/windowsui" WindowStartupLocation="CenterScreen">
+        Title="MainWindow" Height="551" Width="980" Loaded="Window_Loaded" xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid" xmlns:dxwui="http://schemas.devexpress.com/winfx/2008/xaml/windowsui" WindowStartupLocation="CenterScreen">
     <Window.Resources>
         <local:ClientPointTable x:Key="clientPointTable"></local:ClientPointTable>
             <CollectionViewSource x:Key='clients' Source="{Binding Source={StaticResource clientPointTable}}">
@@ -13,9 +13,8 @@
     </Window.Resources>
     <Grid Background="LightBlue">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="589" />
-            <ColumnDefinition Width="235*" />
+            <ColumnDefinition Width="600*" />
+            <ColumnDefinition Width="380*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="8" />
@@ -24,7 +23,12 @@
             <RowDefinition Height="26" />
         </Grid.RowDefinitions>
 
-        <ListView x:Name="lstViewDataHandle" Margin="5" Grid.Row="1" Grid.Column="1">
+        <ListView x:Name="lstViewDataHandle" Margin="5" Grid.Row="1">
+            <ListView.ItemContainerStyle>
+                <Style TargetType="{x:Type ListViewItem}">
+                    <Setter Property="HorizontalContentAlignment" Value="Center" />
+                </Style>
+            </ListView.ItemContainerStyle>
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="端口"
@@ -59,9 +63,14 @@
             </ListView.ContextMenu>
         </ListView>
 
-        <GridSplitter Height="2"  Grid.Column="1" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Bottom"></GridSplitter>
+        <GridSplitter Height="2" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Bottom"></GridSplitter>
 
-        <ListView x:Name="lstViewClientPoint" Margin="5" Grid.Row="2" Grid.Column="1" ItemsSource="{Binding Source={StaticResource clients}}">
+        <ListView x:Name="lstViewClientPoint" Margin="5" Grid.Row="2" ItemsSource="{Binding Source={StaticResource clients}}">
+            <ListView.ItemContainerStyle>
+                <Style TargetType="{x:Type ListViewItem}">
+                    <Setter Property="HorizontalContentAlignment" Value="Center" />
+                </Style>
+            </ListView.ItemContainerStyle>
             <ListView.GroupStyle>
                 <GroupStyle>
                     <GroupStyle.ContainerStyle>
@@ -109,11 +118,11 @@
             </ListView.ContextMenu>
         </ListView>
         
-        <GridSplitter Width="2"  Grid.Column="1" Grid.Row="1" Grid.RowSpan="2" ></GridSplitter>
+        <GridSplitter Width="2" Grid.Row="1" Grid.RowSpan="2" ></GridSplitter>
         
-        <TextBox Name="txtMsg" Grid.Column="2" Grid.Row="1" Grid.RowSpan="2" Margin="5" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" IsReadOnly="True"></TextBox>
+        <TextBox Name="txtMsg" Grid.Column="1" Grid.Row="1" Grid.RowSpan="2" Margin="5" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" IsReadOnly="True"></TextBox>
 
-        <StatusBar Name="statusBar" Grid.Row="3" Grid.ColumnSpan="3" VerticalAlignment="Bottom">
+        <StatusBar Name="statusBar" Grid.Row="3" Grid.ColumnSpan="2" VerticalAlignment="Bottom">
             <StatusBarItem>
                 <TextBlock>Ready</TextBlock>
             </StatusBarItem>
