--- a/StationConsole/MainWindow.xaml
+++ b/StationConsole/MainWindow.xaml
@@ -120,11 +120,20 @@
         
         <GridSplitter Width="2" Grid.Row="1" Grid.RowSpan="2" ></GridSplitter>
         
-        <TextBox Name="txtMsg" Grid.Column="1" Grid.Row="1" Grid.RowSpan="2" Margin="5" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" IsReadOnly="True"></TextBox>
+        <TextBox Name="txtMsg" Grid.Column="1" Grid.Row="1" Grid.RowSpan="2" Margin="5" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" IsReadOnly="True" UndoLimit="0"></TextBox>
 
         <StatusBar Name="statusBar" Grid.Row="3" Grid.ColumnSpan="2" VerticalAlignment="Bottom">
             <StatusBarItem>
                 <TextBlock>Ready</TextBlock>
+            </StatusBarItem>
+            <StatusBarItem>
+                <TextBlock x:Name="currentClientCount">0</TextBlock>
+            </StatusBarItem>
+            <StatusBarItem>
+                <TextBlock x:Name="historyClientOpenCount">0</TextBlock>
+            </StatusBarItem>
+            <StatusBarItem>
+                <TextBlock x:Name="historyClientCloseCount">0</TextBlock>
             </StatusBarItem>
         </StatusBar>
     </Grid>
