--- a/StationConsole/MainWindow.xaml
+++ b/StationConsole/MainWindow.xaml
@@ -68,7 +68,7 @@
         <ListView x:Name="lstViewClientPoint" Margin="5" Grid.Row="2" ItemsSource="{Binding Source={StaticResource clients}}">
             <ListView.ItemContainerStyle>
                 <Style TargetType="{x:Type ListViewItem}">
-                    <Setter Property="HorizontalContentAlignment" Value="Center" />
+                    <Setter Property="HorizontalContentAlignment" Value="left" />
                 </Style>
             </ListView.ItemContainerStyle>
             <ListView.GroupStyle>
