--- a/StationConsole/MainWindow.xaml
+++ b/StationConsole/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:StationConsole"
-        Title="MainWindow" Height="551" Width="980" Loaded="Window_Loaded" xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid" xmlns:dxwui="http://schemas.devexpress.com/winfx/2008/xaml/windowsui" WindowStartupLocation="CenterScreen">
+        Title="MainWindow" Height="551" Width="980" xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid" xmlns:dxwui="http://schemas.devexpress.com/winfx/2008/xaml/windowsui" WindowStartupLocation="CenterScreen">
     <Window.Resources>
         <local:ClientPointTable x:Key="clientPointTable"></local:ClientPointTable>
             <CollectionViewSource x:Key='clients' Source="{Binding Source={StaticResource clientPointTable}}">
@@ -112,8 +112,8 @@
             </ListView.View>
             <ListView.ContextMenu>
                 <ContextMenu StaysOpen="true">
-                    <MenuItem Header="发送命令" Click="MenuItem_SendCommand_Click"/>
-                    <MenuItem Header="关闭连接" Click="MenuItem_CloseClient_Click"/>
+                    <MenuItem Header="发送命令" Click="MenuItem_ClientSendMessage_Click"/>
+                    <MenuItem Header="关闭连接" Click="MenuItem_ClientClose_Click"/>
                 </ContextMenu>
             </ListView.ContextMenu>
         </ListView>
