--- a/StationConsole/MainWindow.xaml
+++ b/StationConsole/MainWindow.xaml
@@ -23,7 +23,7 @@
             <RowDefinition Height="26" />
         </Grid.RowDefinitions>
 
-        <ListView x:Name="lstViewServer" Margin="5" Grid.Row="1">
+        <ListView x:Name="lstViewServer" Margin="5,5,412,5" Grid.Row="1">
             <ListView.ItemContainerStyle>
                 <Style TargetType="{x:Type ListViewItem}">
                     <Setter Property="HorizontalContentAlignment" Value="Center" />
@@ -31,20 +31,20 @@
             </ListView.ItemContainerStyle>
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Header="模块名" Width="90"
+                    <GridViewColumn Header="名称" Width="90"
                                     DisplayMemberBinding="{Binding Name}" />
                     <GridViewColumn Header="端口" Width="50"
                                     DisplayMemberBinding="{Binding Port}" />
                     <GridViewColumn Header="监听状态" Width="60"
                                     DisplayMemberBinding="{Binding ListenState}" />
-                    <GridViewColumn Header="定时器状态" Width="80"
+                    <!--<GridViewColumn Header="定时器状态" Width="80"
                                     DisplayMemberBinding="{Binding TimerState}" />
                     <GridViewColumn Header="定时器时间(秒)" Width="100"
                                     DisplayMemberBinding="{Binding TimerInterval}" />
                     <GridViewColumn Header="定时器命令" Width="80"
                                     DisplayMemberBinding="{Binding TimerCommand}" />
                     <GridViewColumn Header="模块支持" Width="130"
-                                    DisplayMemberBinding="{Binding PluginSupport}" />
+                                    DisplayMemberBinding="{Binding PluginSupport}" />-->
                 </GridView>
             </ListView.View>
             <ListView.ContextMenu>
@@ -52,11 +52,28 @@
                     <MenuItem Header="启动监听" Click="MenuItem_StartListener_Click"/>
                     <MenuItem Header="关闭监听" Click="MenuItem_StopListener_Click"/>
                     <MenuItem Header="设置监听端口" Click="MenuItem_SetListener_Click"/>
-                    <Separator></Separator>
+                    <!--<Separator></Separator>
                     <MenuItem Header="启动定时器" Click="MenuItem_StartTimer_Click"/>
                     <MenuItem Header="停止定时器" Click="MenuItem_StopTimer_Click"/>
                     <MenuItem Header="设置定时器" Click="MenuItem_SetTimer_Click"/>
                     <Separator></Separator>
+                    <MenuItem Header="加载模块" Click="MenuItem_LoadPlugin_Click"/>
+                    <MenuItem Header="卸载模块" Click="MenuItem_UnloadPlugin_Click"/>-->
+                </ContextMenu>
+            </ListView.ContextMenu>
+        </ListView>
+
+        <ListView x:Name="lstViewPlugin" Margin="220,5,8,5" Grid.Row="1">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn Header="模块名" Width="120"
+                                    DisplayMemberBinding="{Binding FileName}" />
+                    <GridViewColumn Header="说明" Width="240"
+                                    DisplayMemberBinding="{Binding FileComment}" />
+                </GridView>
+            </ListView.View>
+            <ListView.ContextMenu>
+                <ContextMenu StaysOpen="true">
                     <MenuItem Header="加载模块" Click="MenuItem_LoadPlugin_Click"/>
                     <MenuItem Header="卸载模块" Click="MenuItem_UnloadPlugin_Click"/>
                 </ContextMenu>
