--- a/StationConsole/MainWindow.xaml
+++ b/StationConsole/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:StationConsole"
-        Title="MainWindow" Height="551" Width="980" xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid" xmlns:dxwui="http://schemas.devexpress.com/winfx/2008/xaml/windowsui" WindowStartupLocation="CenterScreen" Loaded="Window_Loaded">
+        Title="MainWindow" Height="576" Width="1024" xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid" xmlns:dxwui="http://schemas.devexpress.com/winfx/2008/xaml/windowsui" WindowStartupLocation="CenterScreen" Loaded="Window_Loaded">
     <Window.Resources>
         <local:ClientStateTable x:Key="clientStateTable"></local:ClientStateTable>
             <CollectionViewSource x:Key='clients' Source="{Binding Source={StaticResource clientStateTable}}">
@@ -23,7 +23,7 @@
             <RowDefinition Height="26" />
         </Grid.RowDefinitions>
 
-        <ListView x:Name="lstViewServer" Margin="5,5,412,5" Grid.Row="1">
+        <ListView x:Name="lstViewServer" Margin="5,5,0,5" Grid.Row="1" HorizontalAlignment="Left" Width="397">
             <ListView.ItemContainerStyle>
                 <Style TargetType="{x:Type ListViewItem}">
                     <Setter Property="HorizontalContentAlignment" Value="Center" />
@@ -31,19 +31,19 @@
             </ListView.ItemContainerStyle>
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Header="名称" Width="90"
+                    <GridViewColumn Header="名称" Width="80"
                                     DisplayMemberBinding="{Binding Name}" />
                     <GridViewColumn Header="端口" Width="50"
                                     DisplayMemberBinding="{Binding Port}" />
                     <GridViewColumn Header="监听状态" Width="60"
                                     DisplayMemberBinding="{Binding ListenState}" />
-                    <!--<GridViewColumn Header="定时器状态" Width="80"
+                    <GridViewColumn Header="定时器状态" Width="75"
                                     DisplayMemberBinding="{Binding TimerState}" />
-                    <GridViewColumn Header="定时器时间(秒)" Width="100"
+                    <GridViewColumn Header="间隔(秒)" Width="60"
                                     DisplayMemberBinding="{Binding TimerInterval}" />
-                    <GridViewColumn Header="定时器命令" Width="80"
+                    <GridViewColumn Header="命令" Width="60"
                                     DisplayMemberBinding="{Binding TimerCommand}" />
-                    <GridViewColumn Header="模块支持" Width="130"
+                    <!--<GridViewColumn Header="模块支持" Width="130"
                                     DisplayMemberBinding="{Binding ModuleSupport}" />-->
                 </GridView>
             </ListView.View>
@@ -52,23 +52,23 @@
                     <MenuItem Header="启动监听" Click="MenuItem_StartListener_Click"/>
                     <MenuItem Header="关闭监听" Click="MenuItem_StopListener_Click"/>
                     <MenuItem Header="设置监听端口" Click="MenuItem_SetListener_Click"/>
-                    <!--<Separator></Separator>
+                    <Separator></Separator>
                     <MenuItem Header="启动定时器" Click="MenuItem_StartTimer_Click"/>
                     <MenuItem Header="停止定时器" Click="MenuItem_StopTimer_Click"/>
                     <MenuItem Header="设置定时器" Click="MenuItem_SetTimer_Click"/>
-                    <Separator></Separator>
+                    <!--<Separator></Separator>
                     <MenuItem Header="加载模块" Click="MenuItem_LoadModule_Click"/>
                     <MenuItem Header="卸载模块" Click="MenuItem_UnloadModule_Click"/>-->
                 </ContextMenu>
             </ListView.ContextMenu>
         </ListView>
 
-        <ListView x:Name="lstViewModule" Margin="220,5,8,5" Grid.Row="1">
+        <ListView x:Name="lstViewModule" Margin="405,5,5,5" Grid.Row="1">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Header="模块名" Width="120"
+                    <GridViewColumn Header="模块名" Width="100"
                                     DisplayMemberBinding="{Binding FileName}" />
-                    <GridViewColumn Header="说明" Width="240"
+                    <GridViewColumn Header="说明" Width="135"
                                     DisplayMemberBinding="{Binding FileComment}" />
                 </GridView>
             </ListView.View>
@@ -137,7 +137,7 @@
         
         <GridSplitter Width="2" Grid.Row="1" Grid.RowSpan="2" ></GridSplitter>
         
-        <TextBox Name="txtMsg" Grid.Column="1" Grid.Row="1" Grid.RowSpan="2" Margin="5" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" IsReadOnly="True" UndoLimit="0"></TextBox>
+        <TextBox Name="txtMsg" Grid.Column="1" Grid.Row="1" Margin="5" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" IsReadOnly="True" UndoLimit="0" Grid.RowSpan="2"></TextBox>
 
         <StatusBar Name="statusBar" Grid.Row="3" Grid.ColumnSpan="2" VerticalAlignment="Bottom">
             <StatusBarItem>
