Fix deadlock in lock of serverTable

--- a/StationConsole/MainWindow.xaml
+++ b/StationConsole/MainWindow.xaml
@@ -159,6 +159,15 @@
             <StatusBarItem>
                 <TextBlock x:Name="historyClientCloseCount">0</TextBlock>
             </StatusBarItem>
+            <StatusBarItem>
+                <TextBlock x:Name="currentMsgCount">0</TextBlock>
+            </StatusBarItem>
+            <StatusBarItem>
+                <TextBlock x:Name="historyMsgFetchCount">0</TextBlock>
+            </StatusBarItem>
+            <StatusBarItem>
+                <TextBlock x:Name="historyMsgHandledCount">0</TextBlock>
+            </StatusBarItem>
         </StatusBar>
     </Grid>
 </Window>
