--- a/SockClient/MainWindow.xaml
+++ b/SockClient/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="SockClient.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="543" Width="931">
+        Title="MainWindow" Height="543" Width="931" WindowStartupLocation="CenterScreen">
     <Grid Background="LightBlue">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="640*" />
@@ -14,12 +14,40 @@
             <RowDefinition Height="26" />
         </Grid.RowDefinitions>
 
-        <ListView x:Name="lstViewCommand" Margin="5,5,8,5" Grid.Row="2">
+        <ListView x:Name="lstViewConnect" Margin="5,5,7,5" Grid.Row="1">
+            <ListView.ItemContainerStyle>
+                <Style TargetType="{x:Type ListViewItem}">
+                    <Setter Property="HorizontalContentAlignment" Value="Center" />
+                </Style>
+            </ListView.ItemContainerStyle>
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn Header="序号" Width="60"
+                                    DisplayMemberBinding="{Binding ID}" />
+                    <GridViewColumn Header="IP" Width="120"
+                                    DisplayMemberBinding="{Binding IP}" />
+                    <GridViewColumn Header="PORT" Width="60"
+                                    DisplayMemberBinding="{Binding Port}" />
+                    <GridViewColumn Header="状态" Width="90"
+                                    DisplayMemberBinding="{Binding State}" />
+                </GridView>
+            </ListView.View>
+            <ListView.ContextMenu>
+                <ContextMenu StaysOpen="true">
+                    <MenuItem Header="连接" Click="MenuItem_Connect_Click"/>
+                    <MenuItem Header="断开" Click="MenuItem_Disconn_Click"/>
+                </ContextMenu>
+            </ListView.ContextMenu>
+        </ListView>
+
+        <ListView x:Name="lstViewCommand" Margin="5,5,7,5" Grid.Row="2">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="序号" Width="60"
                                     DisplayMemberBinding="{Binding ID}" />
                     <GridViewColumn Header="命令" Width="240"
+                                    DisplayMemberBinding="{Binding CMD}" />
+                    <GridViewColumn Header="说明" Width="240"
                                     DisplayMemberBinding="{Binding CMD}" />
                 </GridView>
             </ListView.View>
