--- a/SockClient/InputDialog.xaml
+++ b/SockClient/InputDialog.xaml
@@ -1,14 +1,16 @@
 ﻿<Window x:Class="SockClient.InputDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="InputDialog" Height="227" Width="372" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" KeyDown="Window_KeyDown">
+        Title="InputDialog" Height="369" Width="618" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" KeyDown="Window_KeyDown">
     <Canvas Background="AntiqueWhite">
         <TextBlock Height="23" HorizontalAlignment="Left" Name="textBlock1" Text="TextBlock" VerticalAlignment="Top" Canvas.Left="30" Canvas.Top="36" />
         <TextBlock Height="23" Name="textBlock2" Text="TextBlock" Canvas.Left="30" Canvas.Top="76" />
+        <TextBlock Height="23" Name="textBlock3" Text="TextBlock" Canvas.Left="30" Canvas.Top="215" />
         <TextBox Height="23" Name="textBox1" Width="159" Canvas.Left="101" Canvas.Top="33" />
-        <TextBox Height="23" Name="textBox2" Width="159" Canvas.Left="101" Canvas.Top="73" PreviewTextInput="textBox2_PreviewTextInput" />
-        <Button Content="确认" Grid.Row="1" Height="23" Margin="157,27,0,0" Name="button1" Width="75" Canvas.Left="14" Canvas.Top="121" Click="button1_Click" />
-        <Button Content="取消" Grid.Row="1" Height="23" HorizontalAlignment="Right" Margin="0,27,25,0" Name="button2" VerticalAlignment="Top" Width="75" Canvas.Left="263" Canvas.Top="121" Click="button2_Click" />
-        <Separator Canvas.Left="12" Canvas.Top="121" Height="1" Name="separator1" Width="335" />
+        <TextBox Height="125" Name="textBox2" Width="438" Canvas.Left="101" Canvas.Top="73" TextWrapping="Wrap" />
+        <TextBox Height="23" Name="textBox3" Width="438" Canvas.Left="101" Canvas.Top="212" />
+        <Button Content="确认" Grid.Row="1" Height="23" Margin="157,27,0,0" Name="button1" Width="75" Canvas.Left="212" Canvas.Top="254" Click="button1_Click" />
+        <Button Content="取消" Grid.Row="1" Height="23" HorizontalAlignment="Right" Margin="0,27,25,0" Name="button2" VerticalAlignment="Top" Width="75" Canvas.Left="464" Canvas.Top="254" Click="button2_Click" />
+        <Separator Canvas.Left="12" Canvas.Top="256" Height="1" Name="separator1" Width="572" />
     </Canvas>
 </Window>
