--- a/SockClient/InputDialog.xaml
+++ b/SockClient/InputDialog.xaml
@@ -1,18 +1,20 @@
 ﻿<Window x:Class="SockClient.InputDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="InputDialog" Height="369" Width="618" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" KeyDown="Window_KeyDown">
+        Title="InputDialog" Height="408" Width="651" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" KeyDown="Window_KeyDown">
     <Canvas Background="AntiqueWhite">
-        <TextBlock Height="23" HorizontalAlignment="Left" Name="textBlock1" Text="TextBlock" VerticalAlignment="Top" Canvas.Left="30" Canvas.Top="36" />
-        <TextBlock Height="23" Name="textBlock2" Text="TextBlock" Canvas.Left="282" Canvas.Top="36" />
-        <TextBlock Height="23" Name="textBlock3" Text="TextBlock" Canvas.Left="30" Canvas.Top="76" />
-        <TextBlock Height="23" Name="textBlock4" Text="TextBlock" Canvas.Left="30" Canvas.Top="215" />
-        <TextBox Height="23" Name="textBox1" Width="159" Canvas.Left="101" Canvas.Top="33" />
-        <TextBox Height="23" Name="textBox2" Width="188" Canvas.Left="351" Canvas.Top="33" />
-        <TextBox Height="125" Name="textBox3" Width="438" Canvas.Left="101" Canvas.Top="73" TextWrapping="Wrap" />
-        <TextBox Height="23" Name="textBox4" Width="438" Canvas.Left="101" Canvas.Top="212" />
-        <Button Content="确认" Grid.Row="1" Height="23" Margin="157,27,0,0" Name="button1" Width="75" Canvas.Left="212" Canvas.Top="254" Click="button1_Click" />
-        <Button Content="取消" Grid.Row="1" Height="23" HorizontalAlignment="Right" Margin="0,27,25,0" Name="button2" VerticalAlignment="Top" Width="75" Canvas.Left="464" Canvas.Top="254" Click="button2_Click" />
-        <Separator Canvas.Left="12" Canvas.Top="256" Height="1" Name="separator1" Width="572" />
+        <TextBlock Height="23" HorizontalAlignment="Left" Name="textBlockID" Text="TextBlock" VerticalAlignment="Top" Canvas.Left="30" Canvas.Top="36" />
+        <TextBlock Height="23" Name="textBlockName" Text="TextBlock" Canvas.Left="282" Canvas.Top="36" />
+        <TextBlock Height="23" Name="textBlockCNNS" Text="TextBlock" Canvas.Left="30" Canvas.Top="71" />
+        <TextBlock Height="23" Name="textBlockCMD" Text="TextBlock" Canvas.Left="30" Canvas.Top="105" />
+        <TextBlock Height="23" Name="textBlockComment" Text="TextBlock" Canvas.Left="30" Canvas.Top="269" />
+        <TextBox Height="23" Name="textBoxID" Width="148" Canvas.Left="101" Canvas.Top="33" />
+        <TextBox Height="23" Name="textBoxName" Width="145" Canvas.Left="362" Canvas.Top="33" />
+        <TextBox Height="23" Name="textBoxCNNS" Width="496" Canvas.Left="101" Canvas.Top="68" />
+        <TextBox Height="153" Name="textBoxCMD" Width="496" Canvas.Left="101" Canvas.Top="102" TextWrapping="Wrap" />
+        <TextBox Height="23" Name="textBoxComment" Width="496" Canvas.Left="101" Canvas.Top="269" />
+        <Button Content="确认" Grid.Row="1" Height="23" Margin="157,27,0,0" Name="button1" Width="75" Canvas.Left="251" Canvas.Top="307" Click="button1_Click" />
+        <Button Content="取消" Grid.Row="1" Height="23" HorizontalAlignment="Right" Margin="0,27,25,0" Name="button2" VerticalAlignment="Top" Width="75" Canvas.Left="522" Canvas.Top="307" Click="button2_Click" />
+        <Separator Canvas.Left="12" Canvas.Top="312" Height="1" Name="separator1" Width="605" />
     </Canvas>
 </Window>
