--- a/SockConn/InputDialog.xaml
+++ b/SockConn/InputDialog.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="SockClient.InputDialog"
+﻿<Window x:Class="SockConn.InputDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="InputDialog" Height="408" Width="651" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" KeyDown="Window_KeyDown">
