--- a/SockConn/SelectDialog.xaml
+++ b/SockConn/SelectDialog.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="SockClient.SelectDialog"
+﻿<Window x:Class="SockConn.SelectDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="SelectDialog" Height="369" Width="618" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" KeyDown="Window_KeyDown">
