--- a/SockConn/MainWindow.xaml
+++ b/SockConn/MainWindow.xaml
@@ -24,6 +24,8 @@
                 <GridView>
                     <GridViewColumn Header="ID" Width="60"
                                     DisplayMemberBinding="{Binding ID}" />
+                    <GridViewColumn Header="Name" Width="60"
+                                    DisplayMemberBinding="{Binding Name}" />
                     <GridViewColumn Header="IP" Width="120"
                                     DisplayMemberBinding="{Binding IP}" />
                     <GridViewColumn Header="PORT" Width="60"
