--- a/SockConn/CmdInputDialog.xaml
+++ b/SockConn/CmdInputDialog.xaml
@@ -1,13 +1,13 @@
-﻿<Window x:Class="SockConn.InputDialog"
+﻿<Window x:Class="SockConn.CmdInputDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="InputDialog" Height="408" Width="651" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" KeyDown="Window_KeyDown">
     <Canvas Background="AntiqueWhite">
-        <TextBlock Height="23" HorizontalAlignment="Left" Name="textBlockID" Text="TextBlock" VerticalAlignment="Top" Canvas.Left="30" Canvas.Top="36" />
-        <TextBlock Height="23" Name="textBlockName" Text="TextBlock" Canvas.Left="282" Canvas.Top="36" />
-        <TextBlock Height="23" Name="textBlockCNNS" Text="TextBlock" Canvas.Left="30" Canvas.Top="71" />
-        <TextBlock Height="23" Name="textBlockCMD" Text="TextBlock" Canvas.Left="30" Canvas.Top="105" />
-        <TextBlock Height="23" Name="textBlockComment" Text="TextBlock" Canvas.Left="30" Canvas.Top="269" />
+        <TextBlock Height="23" HorizontalAlignment="Left" Name="textBlockID" Text="ID :" VerticalAlignment="Top" Canvas.Left="30" Canvas.Top="36" />
+        <TextBlock Height="23" Name="textBlockName" Text="Name :" Canvas.Left="282" Canvas.Top="36" />
+        <TextBlock Height="23" Name="textBlockCNNS" Text="CNNS :" Canvas.Left="30" Canvas.Top="71" />
+        <TextBlock Height="23" Name="textBlockCMD" Text="CMD :" Canvas.Left="30" Canvas.Top="105" />
+        <TextBlock Height="23" Name="textBlockComment" Text="Comment :" Canvas.Left="30" Canvas.Top="269" />
         <TextBox Height="23" Name="textBoxID" Width="148" Canvas.Left="101" Canvas.Top="33" />
         <TextBox Height="23" Name="textBoxName" Width="145" Canvas.Left="362" Canvas.Top="33" />
         <TextBox Height="23" Name="textBoxCNNS" Width="496" Canvas.Left="101" Canvas.Top="68" />
