--- a/SockConn/CmdInputDialog.xaml
+++ b/SockConn/CmdInputDialog.xaml
@@ -10,8 +10,8 @@
         <TextBlock Height="23" Name="textBlockComment" Text="Comment :" Canvas.Left="30" Canvas.Top="269" />
         <TextBox Height="23" Name="textBoxID" Width="148" Canvas.Left="101" Canvas.Top="33" />
         <TextBox Height="23" Name="textBoxName" Width="145" Canvas.Left="362" Canvas.Top="33" />
-        <TextBox Height="23" Name="textBoxCNNS" Width="496" Canvas.Left="101" Canvas.Top="68" />
-        <TextBox Height="153" Name="textBoxCMD" Width="496" Canvas.Left="101" Canvas.Top="102" TextWrapping="Wrap" />
+        <TextBox Height="23" Name="textBoxCnns" Width="496" Canvas.Left="101" Canvas.Top="68" />
+        <TextBox Height="153" Name="textBoxCmd" Width="496" Canvas.Left="101" Canvas.Top="102" TextWrapping="Wrap" />
         <TextBox Height="23" Name="textBoxComment" Width="496" Canvas.Left="101" Canvas.Top="269" />
         <Button Content="确认" Grid.Row="1" Height="23" Margin="157,27,0,0" Name="button1" Width="75" Canvas.Left="251" Canvas.Top="307" Click="button1_Click" />
         <Button Content="取消" Grid.Row="1" Height="23" HorizontalAlignment="Right" Margin="0,27,25,0" Name="button2" VerticalAlignment="Top" Width="75" Canvas.Left="522" Canvas.Top="307" Click="button2_Click" />
