--- a/SockMaster/App.xaml
+++ b/SockMaster/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="SockMgr.App"
+﻿<Application x:Class="SockMaster.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="SockMgrWindow.xaml">
